
      \item \code{plot(<formula>, data=<matrix>,..)} now works in more
      cases; similarly for \code{points()}, \code{lines()} and
      \code{text()}.
      
      \item \code{edit.default()} contained a manual dispatch for matrices
      (the \code{"matrix"} class didn't really exist when it was written). 
      This caused an infinite recursion in the no-GUI case and has now
      been removed. 
    }
  }
}

\section{CHANGES IN R VERSION 2.12.2 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{max()} and \code{min()} work harder to ensure that
      \code{NA} has precedence over \code{NaN}, so e.g. \code{min(NaN,
	NA)} is \code{NA}.  (This was not previously documented except
      for within a single numeric vector, where compiler optimizations
      often defeated the code.)
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item A change to the C function \samp{R_tryEval} had broken error
      messages in S4 method selection; the error message is now printed.

      \item PDF output with non-RGB color model used RGB for the line stroke
      color.  (\PR{14511})

      \item \code{stats4::BIC()} assumed without checking that an object
      of class \code{"logLik"} has an \code{"nobs"} attribute:
      \code{glm()} fits did not and so \code{BIC()} failed for them.

      \item In some circumstances a one-sided \code{mantelhaen.test()}
      reported the p-value for the wrong tail.  (\PR{14514})

      \item Passing the invalid value \code{lty = NULL} to \code{axis()}
      sent an invalid value to the graphics device, and might cause the
      device to segfault.
      
      \item \code{Sweave()} with \code{concordance=TRUE} could lead to
      invalid PDF files; \file{Sweave.sty} has been updated to avoid
      this.
      
      \item Non-ASCII characters in the titles of help pages were 
      not rendered properly in some locales, and could cause errors
      or warnings.
    }
  }
}
